Add reconstructions folder

--- a/phdutils/bcdi/PhasingNotebook.ipynb
+++ b/phdutils/bcdi/PhasingNotebook.ipynb
@@ -233,7 +233,7 @@
     "        cdi = (sup * RAAR(beta=0.9, calc_llk=50, show_cdi=50, update_psf=20)**50)**10 * cdi\n",
     "        cdi = (sup * ER(calc_llk=50, show_cdi=50, update_psf=20)**50)**6 * cdi\n",
     "\n",
-    "        cdi.save_obj_cxi(\"result_scan_{}_run_{}_LLK_{:.4}_support_{:.4}_autocorrelation.cxi\".format(scan,\n",
+    "        cdi.save_obj_cxi(\"reconstructions/result_scan_{}_run_{}_LLK_{:.4}_support_{:.4}_autocorrelation.cxi\".format(scan,\n",
     "                                                                                         i,\n",
     "                                                                                         cdi.get_llk()[0],\n",
     "                                                                                        threshold_relative))\n",
