Update read_vtk module

--- a/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
+++ b/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "social-ozone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scan nb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "challenging-empire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data from vtk file (this file should have been created via paraview)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "representative-large",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,42 +46,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-atlanta",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "Facets.extract_facet(10, plot = True, view = [90, 0], output=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "union-passing",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "Facets.extract_facet(11, plot = True, view = [90,0 ], output=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "hollow-scoop",
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = np.array([Facets.field_data.n0[10], Facets.field_data.n1[10], Facets.field_data.n2[10]])\n",
-    "v = np.array([Facets.field_data.n0[9], Facets.field_data.n1[9], Facets.field_data.n2[9]])"
+    "help(Facets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive plot that allows you to see each facet, and the direction of the normal to each facet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exposed-resident",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Facets.window"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Be careful to pick two facets that are perpendicular to each other, us the view argument to make sure of that"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ind1 = 10\n",
+    "Facets.extract_facet(ind1, plot = True, view = [90, 0], output=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ind2 = 11\n",
+    "Facets.extract_facet(ind2, plot = True, view = [90,0 ], output=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = np.array([Facets.field_data.n0[ind1-1], Facets.field_data.n1[10], Facets.field_data.n2[10]])\n",
+    "v = np.array([Facets.field_data.n0[ind2-1], Facets.field_data.n1[9], Facets.field_data.n2[9]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make sure you are using the right facets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +122,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Below is an example of rotation matrix, here I know that the facet 10 actually correponds to a 111, and that the facet 11 corresponds to a 110"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hollow-thomson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +138,14 @@
     "    u0 = [1, 1, 1]/np.sqrt(3),\n",
     "    v0 = [1, -1, 0]/np.sqrt(2),\n",
     "    w0 = [1, 1, -2]/np.sqrt(6),\n",
-    "    u = u, # facet n°11, the top one\n",
-    "    v = v # facet n°6, the one biggest one on the side, third biggest after the 111\n",
+    "    u = u,\n",
+    "    v = v,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thousand-pregnancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unlimited-charter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +164,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civil-acrobat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,10 +173,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrow-optimization",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Facets.window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Facets.plot_strain()"
@@ -138,10 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-declaration",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Facets.plot_displacement()"
@@ -150,10 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limiting-cause",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Facets.evolution_curves()"
@@ -162,17 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arctic-kansas",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Facets.field_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "restricted-evidence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
