Error in facet analysis notebook Cab save facets as hdf5 even if no rotation happened

--- a/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
+++ b/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
@@ -101,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = np.array([Facets.field_data.n0[ind1-1], Facets.field_data.n1[10], Facets.field_data.n2[10]])\n",
-    "v = np.array([Facets.field_data.n0[ind2-1], Facets.field_data.n1[9], Facets.field_data.n2[9]])"
+    "u = np.array([Facets.field_data.n0[ind1-1], Facets.field_data.n1[ind1-1], Facets.field_data.n2[ind1-1]])\n",
+    "v = np.array([Facets.field_data.n0[ind2-1], Facets.field_data.n1[ind2-1], Facets.field_data.n2[ind2-1]])"
    ]
   },
   {
@@ -118,7 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u, v"
+    "print(f\"111 facet has vector {u} and corresponds to id {ind1}\")\n",
+    "print(f\"1-10 facet has vector {v} and corresponds to id {ind2}\")"
    ]
   },
   {
