get rid of -1 in facet ids

--- a/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
+++ b/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make sure to select the correct kernel ! On slurm that would be p9_3.8_stable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -45,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(Facets)"
+    "# help(Facets)"
    ]
   },
   {
@@ -101,8 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = np.array([Facets.field_data.n0[ind1-1], Facets.field_data.n1[ind1-1], Facets.field_data.n2[ind1-1]])\n",
-    "v = np.array([Facets.field_data.n0[ind2-1], Facets.field_data.n1[ind2-1], Facets.field_data.n2[ind2-1]])"
+    "u = np.array([Facets.field_data.n0[ind1], Facets.field_data.n1[ind1], Facets.field_data.n2[ind1]])\n",
+    "v = np.array([Facets.field_data.n0[ind2], Facets.field_data.n1[ind2], Facets.field_data.n2[ind2]])"
    ]
   },
   {
@@ -118,8 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"111 facet has vector {u} and corresponds to id {ind1}\")\n",
-    "print(f\"1-10 facet has vector {v} and corresponds to id {ind2}\")"
+    "print(f\"111 facet has normal {np.round(u, 2)} and corresponds to id {ind1}\")\n",
+    "print(f\"1-10 facet has normal {np.round(v, 2)} and corresponds to id {ind2}\")"
    ]
   },
   {
@@ -214,6 +221,15 @@
    "outputs": [],
    "source": [
     "Facets.save_data(f\"./facets_analysis/field_data_{scan}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Facets.to_hdf5(f\"./facets_analysis/field_data_{scan}.h5\")"
    ]
   }
  ],
