rename read_vtk as facet_analysis

--- a/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
+++ b/phdutils/bcdi/data_files/CompareFacetsEvolution.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from phdutils.bcdi import read_vtk\n",
+    "from phdutils.bcdi import facet_analysis\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Facets = read_vtk.Facets(pathdir = \"./\", filename = f\"{scan}_fa.vtk\")"
+    "Facets = facet_analysis.Facets(pathdir = \"./\", filename = f\"{scan}_fa.vtk\")"
    ]
   },
   {
